--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 
 @import './components/buttons';
 @import './components/slider';
+@import './components/form';
 
 @import './layout/footer';
 @import './layout/forms';
