--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -13,22 +13,7 @@
   }
 }
 
-.hero {
-  &__wrapper {
-    background-color: $Porcelain;
-    min-height: 450px;
-  }
-
-  &__title {
-    font-size: 3rem;
-    text-align: left;
-    padding: 0 1rem;
-    margin: 1rem 0;
-    color: $font;
-    font-weight: bold;
-    max-width: 80%;
-  }
-
+.homeHero {
   &__button {
     text-transform: uppercase;
     font-size: 1rem;
@@ -63,11 +48,7 @@
   }
 }
 @media only screen and (min-width: $bp-sm) {
-  .hero {
-    &__title {
-      max-width: 60%;
-    }
-
+  .homeHero {
     &__button {
       margin: 4rem auto;
     }
@@ -84,19 +65,7 @@
   }
 }
 @media only screen and (min-width: $bp-md) {
-  .hero {
-    &__title {
-      font-size: 4rem;
-    }
-
-    &__wrapper {
-      min-height: 600px;
-    }
-
-    &__main-row {
-      margin-left: 15%;
-    }
-
+  .homeHero {
     &__button {
       margin: 6rem 0 3rem 1rem;
     }
@@ -108,19 +77,11 @@
   }
 }
 @media only screen and (min-width: $bp-lg) {
-  .hero {
-    &__title {
-      margin-left: -15%;
-    }
-
+  .homeHero {
     &__button {
       margin: 6rem 0 3rem 1rem;
     }
-
-    &__main-row {
-      margin-left: 10%;
-    }
-
+    
     &__img {
       width: 70%;
       margin-top: -5%;
@@ -129,17 +90,7 @@
   }
 }
 @media only screen and (min-width: $bp-xl) {
-  .hero {
-    &__main-row {
-      margin-left: 20%;
-    }
-
-    &__title {
-      max-width: 40%;
-      font-size: 4.5rem;
-      margin-left: -8%;
-    }
-
+  .homeHero {
     &__img {
       width: 50%;
       margin-top: -8%;
