--- a/src/scss/pages/_recipes.scss
+++ b/src/scss/pages/_recipes.scss
@@ -1,140 +1,150 @@
+@import '../base/colours';
+@import '../layout/grid';
 
-/* ==========| Recepies |========== */
-.section_cont{
-    margin-top: 100px;
-    
-}
-.rece_page_cont{
-    background-color: white;
-    height: 100vh;
-    padding-top: 100px;
 
-}
-
-.recepies_page{
-    background-color: #EBF1F0;
-    height: 100%;
-    
-}
-.cont_recepies{
-    /*height: 90vh;*/
-    width: 100%;
-    
-    padding-left: 50px;
+//styles for each section on Recipes page
+.recipesSection {
+  padding: 50px 0;
+  overflow-x: hidden;
+  &:first-of-type{
+    margin-top: 50px;
+  }
+  &:last-of-type{
+    margin-bottom: 50px;
+  }
 }
 
-.cont_recepies a{
-    text-decoration: none;
-    font-size: 1.5em;
-    color: #616770;   
-}
+//Top section with list of all diets
+.dietType {
+  margin-bottom: 50px;
 
-.recepies_wrap{
-    height: 100%;
-}
-
-.rece_tit h3{
-    margin-left: 0;
-}
-
-.rece_tit h2{
-    margin-left: 0;
-}
-
-.menu_rece_img{
-    max-height: 150px;
-}
-
-.cont_img {
-    width:150px;
-    height:150px;
+  &__animation {
     overflow:hidden;
     -webkit-transition:all .9s ease; /* Safari y Chrome */
     -moz-transition:all .9s ease; /* Firefox */
     -o-transition:all .9s ease; /* IE 9 */
     -ms-transition:all .9s ease; /* Opera */
-}
 
-.cont_img:hover{
-    -webkit-transform:scale(1.15);
-    -moz-transform:scale(1.15);
-    -ms-transform:scale(1.15);
-    -o-transform:scale(1.15);
-    transform:scale(1.15);
-    
-}
-
-.cont_img img{
-    -webkit-transition:all .9s ease; /* Safari y Chrome */
-    -moz-transition:all .9s ease; /* Firefox */
-    -o-transition:all .9s ease; /* IE 9 */
-    -ms-transition:all .9s ease; /* Opera */
-}
-
-.cont_img:hover img {
-    -webkit-transform:scale(1.15);
-    -moz-transform:scale(1.15);
-    -ms-transform:scale(1.15);
-    -o-transform:scale(1.15);
-    transform:scale(1.15);
-}
-
-.recepies_wrap{
-    display: flex;
-    align-content: space-around;
-}
-
-.recepies_img img{
-    max-width: 400px;
-}
-
-.enlace{
-    display: none;
-    margin-top: 100px;
-}
-/* ---------- | go back button | ----------  */
-
-.go_up {
-	display:inline-block;
-    width: 25px;
-    height: 25px;
-	padding:20px;
-	background:#f9b4ec;
-	font-size:20px;
-	color:#fff;
-	cursor:pointer;
-	position: fixed;
-	bottom:20px;
-	right:20px;
-    border: 0px solid white;
-    border-radius: 5px;
-    z-index: 999;
-}
-.go_up:hover{
-    background-color: #fac4f0;
-    
-}
-
-.go_up:before{
-	content:'^';
-	font-size:1.5em;
-	position:absolute;
-	border-color:inherit;
-	transition:transform .5s ease-in;
-    margin-left: 5px;
-
-}
-
-.go_up:hover:before{
-	transform: rotate(360deg);
-  
-}
-
-@media only screen and (max-width: 540px) {
-    .recepies_img{
-        display: none;
+    &:hover {
+      -webkit-transform:scale(1.15);
+      -moz-transform:scale(1.15);
+      -ms-transform:scale(1.15);
+      -o-transform:scale(1.15);
+      transform:scale(1.15);
     }
-    .menu_rece_img{
-        display: none;
-    }
+  }
+  &__img {
+    max-width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  &__link{
+    text-decoration: none;
+    font-size: 1.5em;
+    color: $font;
+    display: block;
+    text-align: center;
+    margin: 25px auto;
+  }
 }
+
+//Sections with recipes by diet
+.dietRecipes{
+  max-width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 40px;
+  &__img {
+    max-width: 80%;
+    margin: 20px auto 40px;
+  }
+}
+
+@media only screen and (min-width: $bp-sm) {
+  .dietRecipes{
+    &__img {
+      max-width: 60%;
+    }
+  }
+}
+
+@media only screen and (min-width: $bp-md) {
+  .dietRecipes{
+    max-width: 80%;
+    flex-direction: row;
+    &--imgLeft {
+      flex-direction: row-reverse;
+    }
+    &__img {
+      width: 45%;
+      max-width: none;
+    }
+    &__list {
+      width: 45%;
+    }
+  }
+}
+
+@media only screen and (min-width: $bp-lg) {
+  .dietType{
+    &__img{
+      max-width: 60%;
+    }
+  }
+}
+
+@media only screen and (min-width: $bp-xl) {
+  .recipesSection{
+    &--smaller{
+      max-width: 90%;
+      margin: 0 auto;
+    }
+  }
+}
+
+
+
+
+
+// @media only screen and (max-width: 540px) {
+//     .recepies_img{
+//         display: none;
+//     }
+// }
+
+
+// .cont_img {
+//     // width:150px;
+//     // height:150px;
+//     overflow:hidden;
+//     -webkit-transition:all .9s ease; /* Safari y Chrome */
+//     -moz-transition:all .9s ease; /* Firefox */
+//     -o-transition:all .9s ease; /* IE 9 */
+//     -ms-transition:all .9s ease; /* Opera */
+// }
+//
+// .cont_img:hover{
+//     -webkit-transform:scale(1.15);
+//     -moz-transform:scale(1.15);
+//     -ms-transform:scale(1.15);
+//     -o-transform:scale(1.15);
+//     transform:scale(1.15);
+//
+// }
+//
+// .cont_img img{
+//     -webkit-transition:all .9s ease; /* Safari y Chrome */
+//     -moz-transition:all .9s ease; /* Firefox */
+//     -o-transition:all .9s ease; /* IE 9 */
+//     -ms-transition:all .9s ease; /* Opera */
+// }
+//
+// .cont_img:hover img {
+//     -webkit-transform:scale(1.15);
+//     -moz-transform:scale(1.15);
+//     -ms-transform:scale(1.15);
+//     -o-transform:scale(1.15);
+//     transform:scale(1.15);
+// }
