--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,8 @@
 @import './base/general';
 
 @import './components/buttons';
+@import './components/hero';
+@import './components/goup';
 @import './components/slider';
 
 @import './layout/footer';
