--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1585,68 +1585,16 @@ body {
   .col-12-xl {
     width: 96%; } }
 
-/* ==========| Alex styles |========== */
-/* ==========| Rece|========== */
-.fix_navbar {
-  position: fixed;
-  width: 100%;
-  height: 100px;
-  z-index: 9999;
-  background-color: #bbdae7; }
+.steps__container {
+  background-color: white; }
 
-/* BAR STEPS */
-.bar {
-  height: 50px;
-  background-color: white;
-  position: fixed;
-  z-index: 9997;
-  width: 100%;
-  top: 100px; }
+.step_cont {
+  background-color: #bae2be;
+  padding: 15px; }
 
-.step_bar {
-  position: fixed;
-  z-index: 9999;
-  top: 100px;
-  display: flex;
-  align-content: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 50px; }
-
-.step_link {
-  display: flex;
-  align-content: center; }
-
-a:link {
-  text-decoration: none; }
-
-/* INGREDIENTS */
-.cont_ingredients {
-  position: fixed;
-  display: inline-block;
-  top: 160px;
-  right: 0px;
-  background-color: aquamarine; }
-
-.cont_directions {
-  background-color: burlywood;
-  margin-top: 160px;
-  padding: 10px; }
-
-.nav {
-  background-color: blueviolet; }
-
-/* NEW STYLES */
-.navbar_fix {
-  top: 0;
-  height: 100px; }
-
-.bar_cont {
-  position: fixed;
-  top: 100px;
-  height: 50px;
-  width: 100%;
-  background-color: lawngreen; }
+h4 {
+  font-size: 2em;
+  margin: 0; }
 
 .container {
   width: 90%;
