--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1867,10 +1867,13 @@ h4 {
 
 /* ALEX STYLES */
 
-.receSection{
+.rece__section{
     padding: 150px 0;
 }
 
+.stepSection{
+    margin-bottom: 100px;
+}
 .steps__container{
     background-color: white;
 }
@@ -1883,8 +1886,14 @@ h4 {
     background-color: #EBF1F0;
 }
 h4{
-    font-size: 2em;
+    font-size: 1.5em;
     margin: 0;
+}
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
 }
 
 
@@ -1904,3 +1913,60 @@ h4{
     }
   }
 */
+
+
+@media only screen and (min-width: 960px) {
+    .rece__title{
+        max-width: 80%;
+
+    }
+    
+    .stepbar__section{
+        position: fixed;
+        z-index: 9998;
+        top: 95.5px;
+        width: 100%;
+        height: 50px;
+        background-color: white;
+    
+    }
+    
+    .stepbar__step{
+        background-color: white;
+        width: 100%;
+        height: 50px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    
+    .stepbar__step__done{
+        height: 50px;
+        background-color: #BAE2BE;
+    }
+    
+
+    .stepbar__link{
+        text-decoration: none;
+        color: #616770;
+        margin: auto;
+    }
+    
+    #stepbar0{
+        background-color:#BAE2BE;
+    }
+    
+    .ingredientsSection{
+        position: fixed;
+        right: 100px;
+        top: 150px;
+        z-index: 9997;
+        
+    }
+
+}
+
+@media only screen and (max-width: 959px) {
+    .stepbar__section{
+        display: none;
+    }
+}
