--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -538,6 +538,228 @@ body {
   .col-12-xl {
     width: 96%; } }
 
+.hero__wrapper {
+  background-color: #ebf1f0;
+  min-height: 450px; }
+
+.hero__title {
+  font-size: 3rem;
+  text-align: left;
+  padding: 0 1rem;
+  margin: 1rem 0;
+  color: #616770;
+  font-weight: bold;
+  max-width: 80%; }
+
+@media only screen and (min-width: 540px) {
+  .hero__title {
+    max-width: 60%; } }
+
+@media only screen and (min-width: 769px) {
+  .hero__title {
+    font-size: 4rem; }
+  .hero__wrapper {
+    min-height: 600px; }
+  .hero__main-row {
+    margin-left: 15%; } }
+
+@media only screen and (min-width: 960px) {
+  .hero__title {
+    margin-left: -15%; }
+  .hero__main-row {
+    margin-left: 10%; } }
+
+@media only screen and (min-width: 1200px) {
+  .hero__main-row {
+    margin-left: 20%; }
+  .hero__title {
+    max-width: 40%;
+    font-size: 4.5rem;
+    margin-left: -8%; } }
+
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  @media only screen and (min-width: 540px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 769px) {
+    .container {
+      width: 90%; } }
+  @media only screen and (min-width: 960px) {
+    .container {
+      width: 85%; } }
+  @media only screen and (min-width: 1200px) {
+    .container {
+      width: 80%; } }
+
+.row {
+  position: relative;
+  width: 100%; }
+
+.row [class^="col"] {
+  float: left;
+  margin: 0.5rem 1%;
+  min-height: 0.125rem;
+  padding: 0 1%; }
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.col {
+  width: 96%; }
+
+.col-1 {
+  width: 4.33333%; }
+
+.col-2 {
+  width: 12.66667%; }
+
+.col-3 {
+  width: 21%; }
+
+.col-4 {
+  width: 29.33333%; }
+
+.col-5 {
+  width: 37.66667%; }
+
+.col-6 {
+  width: 46%; }
+
+.col-7 {
+  width: 54.33333%; }
+
+.col-8 {
+  width: 62.66667%; }
+
+.col-9 {
+  width: 71%; }
+
+.col-10 {
+  width: 79.33333%; }
+
+.col-11 {
+  width: 87.33333%; }
+
+.col-12 {
+  width: 96%; }
+
+@media only screen and (min-width: 540px) {
+  .col-sm {
+    width: 96%; }
+  .col-1-sm {
+    width: 4.33333%; }
+  .col-2-sm {
+    width: 12.66667%; }
+  .col-3-sm {
+    width: 21%; }
+  .col-4-sm {
+    width: 29.33333%; }
+  .col-5-sm {
+    width: 37.66667%; }
+  .col-6-sm {
+    width: 46%; }
+  .col-7-sm {
+    width: 54.33333%; }
+  .col-8-sm {
+    width: 62.66667%; }
+  .col-9-sm {
+    width: 71%; }
+  .col-10-sm {
+    width: 79.33333%; }
+  .col-11-sm {
+    width: 87.33333%; }
+  .col-12-sm {
+    width: 96%; } }
+
+@media only screen and (min-width: 769px) {
+  .col-md {
+    width: 96%; }
+  .col-1-md {
+    width: 4.33333%; }
+  .col-2-md {
+    width: 12.66667%; }
+  .col-3-md {
+    width: 21%; }
+  .col-4-md {
+    width: 29.33333%; }
+  .col-5-md {
+    width: 37.66667%; }
+  .col-6-md {
+    width: 46%; }
+  .col-7-md {
+    width: 54.33333%; }
+  .col-8-md {
+    width: 62.66667%; }
+  .col-9-md {
+    width: 71%; }
+  .col-10-md {
+    width: 79.33333%; }
+  .col-11-md {
+    width: 87.33333%; }
+  .col-12-md {
+    width: 96%; } }
+
+@media only screen and (min-width: 960px) {
+  .col-lg {
+    width: 96%; }
+  .col-1-lg {
+    width: 4.33333%; }
+  .col-2-lg {
+    width: 12.66667%; }
+  .col-3-lg {
+    width: 21%; }
+  .col-4-lg {
+    width: 29.33333%; }
+  .col-5-lg {
+    width: 37.66667%; }
+  .col-6-lg {
+    width: 46%; }
+  .col-7-lg {
+    width: 54.33333%; }
+  .col-8-lg {
+    width: 62.66667%; }
+  .col-9-lg {
+    width: 71%; }
+  .col-10-lg {
+    width: 79.33333%; }
+  .col-11-lg {
+    width: 87.33333%; }
+  .col-12-lg {
+    width: 96%; } }
+
+@media only screen and (min-width: 1200px) {
+  .col-xl {
+    width: 96%; }
+  .col-1-xl {
+    width: 4.33333%; }
+  .col-2-xl {
+    width: 12.66667%; }
+  .col-3-xl {
+    width: 21%; }
+  .col-4-xl {
+    width: 29.33333%; }
+  .col-5-xl {
+    width: 37.66667%; }
+  .col-6-xl {
+    width: 46%; }
+  .col-7-xl {
+    width: 54.33333%; }
+  .col-8-xl {
+    width: 62.66667%; }
+  .col-9-xl {
+    width: 71%; }
+  .col-10-xl {
+    width: 79.33333%; }
+  .col-11-xl {
+    width: 87.33333%; }
+  .col-12-xl {
+    width: 96%; } }
+
 .paragraph {
   margin-top: 100px;
   margin-bottom: 100px;
@@ -1187,17 +1409,18 @@ body {
     width: 96%; } }
 
 .navbar {
-  background-color: #fff;
+  background-color: #ebf1f0;
   /* For Safari 3.1 to 6.0 */
   -webkit-transition: background-color 0.5s;
   transition: background-color 0.5s;
   position: fixed;
-  padding: 15px 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
   width: 100%;
   z-index: 99999999;
   box-sizing: border-box; }
   .navbar--scrolled {
-    background-color: #bbdae7;
+    background-color: #bbdae7 !important;
     /* For Safari 3.1 to 6.0 */
     -webkit-transition: background-color 0.5s;
     transition: background-color 0.5s; }
@@ -1206,17 +1429,25 @@ body {
     flex-direction: row;
     justify-content: space-between; }
   .navbar__logo {
-    color: pink;
+    color: red;
     margin-left: 15px; }
   .navbar__list {
     display: none;
     padding: 15px; }
+  .navbar__ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    margin: 40px auto 0px;
+    padding-left: 0px; }
+  .navbar__li {
+    margin-bottom: 10px; }
   .navbar__link {
     color: #616770;
     text-align: left;
     text-decoration: none;
     padding: 5px;
-    font-size: 17px; }
+    font-size: 1.2rem; }
     .navbar__link--active {
       background-color: #0EC99D;
       color: white; }
@@ -1232,14 +1463,19 @@ body {
   flex-direction: column;
   text-align: left; }
 
-@media only screen and (min-width: 540px) {
+@media only screen and (min-width: 769px) {
   .navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
     padding: 15px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    background-color: #fff; }
+    .navbar__ul {
+      display: flex;
+      flex-direction: row;
+      margin-top: 0px; }
     .navbar__button {
       display: none; }
     .navbar__list {
@@ -1848,27 +2084,14 @@ body {
     width: 96%; } }
 
 .homeSection {
-  padding: 50px 0; }
+  padding: 50px 0 25px; }
   .homeSection--first {
     padding: 150px 0 50px;
     overflow-x: hidden; }
   .homeSection--third {
     padding-bottom: 100px; }
 
-.hero__wrapper {
-  background-color: #ebf1f0;
-  min-height: 450px; }
-
-.hero__title {
-  font-size: 3rem;
-  text-align: left;
-  padding: 0 1rem;
-  margin: 1rem 0;
-  color: #616770;
-  font-weight: bold;
-  max-width: 80%; }
-
-.hero__button {
+.homeHero__button {
   text-transform: uppercase;
   font-size: 1rem;
   padding: 0.8rem;
@@ -1876,71 +2099,55 @@ body {
   color: #fff;
   border: none;
   display: block;
-  margin: 3rem 0 3rem 30%; }
-  .hero__button:hover {
+  width: 170px;
+  text-align: center;
+  text-decoration: none; }
+  .homeHero__button:hover {
     background-color: #9562b6;
     cursor: pointer; }
 
-.hero__button-icon {
+.homeHero__button-icon {
   padding-left: 1rem; }
 
-.hero__left {
+.homeHero__left {
   position: relative; }
 
-.hero__img-wrapper {
+.homeHero__img-wrapper {
   max-width: 100vw; }
 
-.hero__img {
+.homeHero__img {
   max-width: 350px;
   margin-left: 33%; }
 
 @media only screen and (min-width: 540px) {
-  .hero__title {
-    max-width: 60%; }
-  .hero__button {
+  .homeHero__button {
     margin: 4rem auto; }
-  .hero__img-wrapper {
+  .homeHero__img-wrapper {
     max-width: none; }
-  .hero__img {
+  .homeHero__img {
     max-width: none;
     width: 80%;
     margin-left: 35%; } }
 
 @media only screen and (min-width: 769px) {
-  .hero__title {
-    font-size: 4rem; }
-  .hero__wrapper {
-    min-height: 600px; }
-  .hero__main-row {
-    margin-left: 15%; }
-  .hero__button {
+  .homeHero__button {
     margin: 6rem 0 3rem 1rem; }
-  .hero__img {
+  .homeHero__img {
     width: 70%;
     margin-left: -15%; } }
 
 @media only screen and (min-width: 960px) {
-  .hero__title {
-    margin-left: -15%; }
-  .hero__button {
+  .homeHero__button {
     margin: 6rem 0 3rem 1rem; }
-  .hero__main-row {
-    margin-left: 10%; }
-  .hero__img {
+  .homeHero__img {
     width: 70%;
     margin-top: -5%;
     margin-left: 35%; } }
 
 @media only screen and (min-width: 1200px) {
-  .hero__main-row {
-    margin-left: 20%; }
-  .hero__title {
-    max-width: 40%;
-    font-size: 4.5rem;
-    margin-left: -8%; }
-  .hero__img {
+  .homeHero__img {
     width: 50%;
-    margin-top: -8%;
+    margin-top: -25%;
     margin-left: 35%; } }
 
 .three-block__title {
@@ -1976,14 +2183,6 @@ body {
   display: flex;
   flex-direction: row; }
 
-.intro__image {
-  max-width: 80%;
-  display: block;
-  margin: 1rem auto 2rem; }
-
-.intro__image-text {
-  text-align: center; }
-
 .intro__diet {
   padding: 1rem; }
 
@@ -1996,59 +2195,62 @@ body {
   text-align: center;
   margin-top: 2rem; }
 
+.sliderImg {
+  margin: 50px auto 0px; }
+  .sliderImg__image {
+    max-width: 80%;
+    display: block;
+    margin: 0 auto; }
+  .sliderImg__text {
+    text-align: center; }
+
 @media only screen and (min-width: 540px) {
-  .intro__image-wrapper {
+  .sliderImg {
     display: flex;
     flex-direction: row; }
-  .intro__image {
-    max-width: 40%; }
-  .intro__image-text-wrapper {
-    position: relative;
-    width: 50%; }
-  .intro__image-text {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); } }
+    .sliderImg__image {
+      max-width: 40%; }
+    .sliderImg__wrapperText {
+      position: relative;
+      width: 50%; }
+    .sliderImg__text {
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); } }
 
 @media only screen and (min-width: 769px) {
-  .intro__image-wrapper {
+  .sliderImg {
     display: flex;
     flex-direction: row;
     flex-flow: row-reverse; } }
 
-@media only screen and (min-width: 960px) {
+@media only screen and (min-width: 1200px) {
   .intro {
     max-width: 100%;
-    margin: 0 auto; }
+    margin: 0 auto;
+    position: relative; }
+    .intro__offset {
+      margin-left: 24% !important; }
     .intro__block {
       text-align: center; }
-    .intro__image-wrapper {
-      display: block;
-      margin-top: 50%; }
     .intro__text {
       text-align: center;
-      max-width: 60%;
+      max-width: 80%;
       display: block;
       margin: 0 auto; }
-    .intro__image-text-wrapper {
-      width: 100%; }
-    .intro__image-text {
-      position: relative; }
-    .intro__text {
-      max-width: 80%; }
-    .intro__image {
-      max-width: 100%;
-      margin: 2rem 0; } }
-
-@media only screen and (min-width: 1200px) {
-  .intro__image-wrapper {
+  .sliderImg {
+    max-width: 25%;
     display: block;
-    margin-top: 0; }
-  .intro__text {
-    max-width: 50%; } }
+    top: 120px;
+    margin-top: 0px;
+    position: absolute; }
+    .sliderImg__image {
+      max-width: 100%; }
+    .sliderImg__text {
+      display: none; } }
 
 .container {
   width: 90%;
